fixes spacing issue with header

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,7 +4,7 @@ body {
    background: #50aca4;
 }
 .header {
-  padding: 60px;
+  padding: 0px;
   text-align: center;
   color: #e0ebeb;
   font-size: 30px;
